Fix z-index of arrows in staffSlider

--- a/front-end-src/scss/components/_staffSlider.scss
+++ b/front-end-src/scss/components/_staffSlider.scss
@@ -13,6 +13,7 @@
   text-shadow: 0px 0px 4px  $grey;
 
   cursor: pointer;
+  z-index: 1;
 }
 .staffSlider-arrow-right {
   right: -.5em;
